--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 					<div class="row">
 						<div class="4u">
 							<section class="special">
-								<a href="" class="image fit a_a"><img src="images/rajapor.jpg" /></a>
+								<a href="" class="image fit a_a"><img src="images/rajapor.JPG" /></a>
 								<h3>Soundarajan</h3>
 								<p><quote>If loving you was a job, I’d be the most deserving, dedicated, and qualified candidate. In fact, I’d even be willing to work for free</quote></p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special">
-								<a href="#" class="image fit a_a"><img src="images/dharpor.jpg" /></a>
+								<a href="#" class="image fit a_a"><img src="images/dharpor.JPG" /></a>
 								<h3>Dharunnya</h3>
 								<p>Everyone has their own motivation to get up in the morning and face the day. You are mine.</p>	
 							</section>
@@ -119,7 +119,7 @@
                         
 						<div class="4u">
 							<section class="special">
-								<a href="#" class="image fit a_a"><img src="images/pair.jpg" /></a>
+								<a href="#" class="image fit a_a"><img src="images/pair.JPG" /></a>
                                 
 								<h3>Mr. & Mrs.</h3>
 								<p>“Love is the emblem of eternity; it confounds all notion of time; effaces all memory of a beginning, all fear of an end.”</p>
@@ -141,53 +141,53 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/thing.jpg"><img src="images/thing.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/thing.JPG"><img src="images/thing.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mf.jpg"><img src="images/mf.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mf.JPG"><img src="images/mf.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ff.jpg"><img src="images/ff.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ff.JPG"><img src="images/ff.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma.jpg"><img src="images/ma.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma.JPG"><img src="images/ma.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma1.jpg"><img src="images/ma1.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma1.JPG"><img src="images/ma1.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma2.jpg"><img src="images/ma2.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma2.JPG"><img src="images/ma2.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fa1.jpg"><img src="images/fa1.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fa1.JPG"><img src="images/fa1.JPG"></a>
 				</section>
 			</div>
 
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fa2.jpg"><img src="images/fa2.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fa2.JPG"><img src="images/fa2.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fall.jpg"><img src="images/fall.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fall.JPG"><img src="images/fall.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mall.jpg"><img src="images/mall.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mall.JPG"><img src="images/mall.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
@@ -197,7 +197,7 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/all1.jpg"><img src="images/all1.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/all1.JPG"><img src="images/all1.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
@@ -215,12 +215,12 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mc2.jpg"><img src="images/mc2.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mc2.JPG"><img src="images/mc2.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc4.jpg"><img src="images/fc4.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fc4.JPG"><img src="images/fc4.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
@@ -235,12 +235,12 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mc1.jpg"><img src="images/mc1.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mc1.JPG"><img src="images/mc1.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc1.jpg"><img src="images/fc1.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fc1.JPG"><img src="images/fc1.JPG"></a>
 				</section>
 			</div>
 		</div>
