--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		   setTimeout(function(){ $("#loading").fadeOut(500); }, 2000);
 		</script>
 		    <meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
-    <meta property="og:image" content="https://anandyson.github.io/rajudharu/images/wa.png">
-       <div id='hidden' style='display:none;'><img src="https:anandyson.github.io/rajudharu/images/wa.png"></div>
+    <meta property="og:image" content="https://rajadhara.github.io/images/wa.png">
+       <div id='hidden' style='display:none;'><img src="https://rajadhara.github.io/images/wa.png"></div>
 	</head>
 	<body id="top">
 		<!-- Header -->
@@ -192,7 +192,7 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/child.jpg"><img src="images/child.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/child.JPG"><img src="images/child.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
