--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc3.jpg"><img src="images/fc3.jpg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fc3.JPG"><img src="images/fc3.JPG"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
