--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@ a {
 <div class="container">
   <h1 class="animated fadeInUp delay-1s">Hi, <span id="uname">dsdsa</span></h1>
 <p class="animated fadeInUp delay-2s">we invite you to celebrate our wedding</p>
-  <a  class="animated fadeInUp delay-3s" target="_self" href="https://anandyson.github.io/rajudharu">JOIN US</a>
+  <a  class="animated fadeInUp delay-3s" target="_self" href="https://rajadhara.github.io">JOIN US</a>
 </div>
     <script>
     var uname =  window.location.href.split('/');
