--- a/404.html
+++ b/404.html
@@ -72,7 +72,8 @@ a {
 </div>
     <script>
     var uname =  window.location.href.split('/');
-	    if( uname[uname.length-1] === "friends"){
+	    var lastval = uname[uname.length-1];
+	    if( lastval === "friends"){
 	    	window.open("https://rajadhara.github.io/friends.html",_self);
 	    }
   document.getElementById("uname").innerHTML = 
