--- a/friends.html
+++ b/friends.html
@@ -54,7 +54,10 @@
 				</nav>
 			</header>
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner" style="
+    background-image: url('../images/bg.jpeg');
+    padding-top: 23em;
+    background-position: center -18%;">
 				<div class="inner animated a_a fadeIn">
 					<h2>Soundarajan</h2><h2>&</h2><h2>Dharunnya</h2>
 					<p>Are getting married!</p>					
