--- a/friends.html
+++ b/friends.html
@@ -56,7 +56,7 @@
 		<!-- Banner -->
 			<section id="banner" style="
     background-image: url('../images/bg.jpeg');
-    padding-top: 23em;
+    padding-top: 16em;
     background-position: center -18%;">
 				<div class="inner animated a_a fadeIn">
 					<h2>Soundarajan</h2><h2>&</h2><h2>Dharunnya</h2>
@@ -68,7 +68,7 @@
 				<header class="major">
 <h2 class="text-left" style="
     text-align: start;
-">Hey Guys,</h2>					<h4 style="text-transform:capitalize">"I’m marrying my dearest one, my life partner 
+">Hey Guys,</h2>					<h4 style="text-transform:capitalize;text-transform: capitalize;">"I’m marrying my dearest one, my life partner 
 but you are my closest one. I need your company.
 Without you, it couldn’t be a journey, worth-remembering”</h4>
 <h4 style="text-align:end">-Soundarajan & Dharunnya</h4>
