--- a/friends.html
+++ b/friends.html
@@ -43,9 +43,9 @@
 		</div>
 		<!-- Banner -->
 			<section id="banner" style="
-    background-image: url('../images/bg.jpeg');
-    padding-top: 16em;
-    background-position: center 0">
+				    background-image: url('../images/bg.jpeg');
+				    padding-top: 16em;
+				    background-position: center 0">
 				<div class="inner animated a_a fadeIn">
 					<h2>Soundarajan</h2><h2>&</h2><h2>Dharunnya</h2>
 					<p>Are getting married!</p>					
@@ -53,44 +53,41 @@
 			</section>
 		<!-- One -->
 			<section id="one" class="wrapper style1"  style="
-    background: #e42427;
-    background: -webkit-linear-gradient(to right, #ab2330, #e42427);
-    background: -webkit-linear-gradient(left, #ab2330, #e42427);
-    background: -webkit-gradient(linear, right top, left top, from(#ab2330), to(#e42427));
-    background: -o-linear-gradient(left, #ab2330, #e42427);
-    background: linear-gradient(to right, #ab2330, #e42427);
-">
+				    background: #e42427;
+				    background: -webkit-linear-gradient(to right, #ab2330, #e42427);
+				    background: -webkit-linear-gradient(left, #ab2330, #e42427);
+				    background: -webkit-gradient(linear, right top, left top, from(#ab2330), to(#e42427));
+				    background: -o-linear-gradient(left, #ab2330, #e42427);
+				    background: linear-gradient(to right, #ab2330, #e42427);
+				">
 				<header class="major">
-<h2 class="text-left" style="
-    text-align: start;
-">Hey Guys,</h2>					<h4 style="text-transform:capitalize;text-transform: capitalize;">"I’m marrying my dearest one, my life partner 
-but you are my closest one. I need your company.
-Without you, it couldn’t be a journey, worth-remembering”</h4>
-<h4 style="text-align:end">-Soundarajan & Dharunnya</h4>
-                    <h2>June 6<sup>th</sup>, 2019</h2>
-					<!-- Button code -->
-					<div title="Add to Calendar" class="addeventatc" data-direct="google">
-					    Add to Calendar
-					    <span class="start">06/06/2019 08:00 AM</span>
-					    <span class="end">06/06/2019  10:00 AM</span>
-					    <span class="timezone">India</span>
-					    <span class="title">Soundhar & Dharunya wedding</span>
-					    <span class="description">Hey, You are invited to our wedding get celebrated</span>
-					    <span class="location">ARUL ARASU PALACE, VADAGARAI, REDHILLS</span>
-				            <span class="alarm_reminder">1440</span>
-					</div>
-					<h2>Arul Arasan Palace, Vadagarai, Redhills</h2>
-					<p>Opposite to Bharath Petrol Bunk</p>
-
-				</header>                
+				    <h3 style="text-align: justify;">
+					Hey Guys,<br> We are happy to announce that we would like to make our dream of being eternally together come true,
+					and become tied with the eternal promise. Therefore, our friends, we invite you to our amazing wedding ceremony and
+					join us in our happy emotions.<br>-Soundarajan & Dharunnya
+				    </h3>
+				    <h2>June 6<sup>th</sup>, 2019</h2>
+				    <div title="Add to Calendar" class="addeventatc" data-direct="google">
+					Add to Calendar
+					<span class="start">06/06/2019 08:00 AM</span>
+					<span class="end">06/06/2019 10:00 AM</span>
+					<span class="timezone">India</span>
+					<span class="title">Soundhar & Dharunya wedding</span>
+					<span class="description">Hey, You are invited to our wedding get celebrated</span>
+					<span class="location">ARUL ARASU PALACE, VADAGARAI, REDHILLS</span>
+					<span class="alarm_reminder">1440</span>
+				    </div>
+				    <h2>Arul Arasan Palace, Vadagarai, Redhills</h2>
+				    <p>Opposite to Bharath Petrol Bunk</p>
+				</header>        
 				<div class="container">
 					<div class="row">
 						<div class="12u">
 							<section class="special">
 								<div class="actions maporcab">
 									<p><a class="button gmap" style="
-    margin-top: 0;
-" href="https://goo.gl/maps/yaKFvwRPC1p" target="_blank" class="button">View on google maps</a></p>
+									    margin-top: 0;
+									" href="https://goo.gl/maps/yaKFvwRPC1p" target="_blank" class="button">View on google maps</a></p>
 									<p style="margin-bottom: 10px;">Easily plan to the wedding without having to worry about conveyance with Ola</p>
 									<p><a class="button cabbook" href="https://olawebcdn.com/assets/ola-universal-link.html?lat=&lng=&category=share&utm_source=xapp_token&landing_page=bk&drop_lat=13.188&drop_lng=80.193&affiliate_uid=12345" target="_blank" class="button"><i class="fa fa-taxi" style="font-size:22px"></i> Book a cab</a></p>
 								</div>
@@ -201,7 +198,8 @@ Without you, it couldn’t be a journey, worth-remembering”</h4>
         });
       }
     }
-  });	
+  });		
+$('#navButton').hide();
 	</script>
 	</body>
 </html>
