--- a/friends.html
+++ b/friends.html
@@ -89,7 +89,7 @@
 									    margin-top: 0;
 									" href="https://goo.gl/maps/yaKFvwRPC1p" target="_blank" class="button">View on google maps</a></p>
 									<p style="margin-bottom: 10px;">Easily plan to the wedding without having to worry about conveyance with Ola</p>
-									<p><a class="button cabbook" href="https://olawebcdn.com/assets/ola-universal-link.html?lat=&lng=&category=share&utm_source=xapp_token&landing_page=bk&drop_lat=13.188&drop_lng=80.193&affiliate_uid=12345" target="_blank" class="button"><i class="fa fa-taxi" style="font-size:22px"></i> Book a cab</a></p>
+									<p><a class="button cabbook" style="background: #fff;color:#000 !important;" href="https://olawebcdn.com/assets/ola-universal-link.html?lat=&lng=&category=share&utm_source=xapp_token&landing_page=bk&drop_lat=13.188&drop_lng=80.193&affiliate_uid=12345" target="_blank" class="button"><i class="fa fa-taxi" style="font-size:22px;color:#000 !important;"></i> Book a cab</a></p>
 								</div>
 							</section>
 						</div>
