--- a/friends.html
+++ b/friends.html
@@ -26,7 +26,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 		<script>
-		   setTimeout(function(){ $("#loading").fadeOut(500); }, 2000);
+		   setTimeout(function(){ $("#loading").fadeOut(500); $('#navButton').hide();
+$('.cabbook').css({"color":"#000 !important"});}, 2000);
 		</script>
 		    <meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
     <meta property="og:image" content="https://rajadhara.github.io/images/wa.png">
@@ -199,8 +200,7 @@
       }
     }
   });		
-$('#navButton').hide();
-$('.cabbook').css({"color":"#000 !important"});
+
 	</script>
 	</body>
 </html>
