--- a/friends.html
+++ b/friends.html
@@ -6,8 +6,6 @@
 		<link rel="shortcut icon" href="images/favicon.ico">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		<link rel="stylesheet" href="css/animate.css" />
 		<noscript>
@@ -26,8 +24,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 		<script>
-		   setTimeout(function(){ $("#loading").fadeOut(500); $('#navButton').hide();
-$('.cabbook').css({"color":"#000 !important"});}, 2000);
+		   setTimeout(function(){ $("#loading").fadeOut(500);}, 2000);
 		</script>
 		    <meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
     <meta property="og:image" content="https://rajadhara.github.io/images/wa.png">
