--- a/friends.html
+++ b/friends.html
@@ -6,6 +6,8 @@
 		<link rel="shortcut icon" href="images/favicon.ico">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<link rel="stylesheet" href="css/animate.css" />
 		<noscript>
@@ -17,6 +19,7 @@
         <style>
             .map {width: 100%; margin: 0 auto; border-radius: 5px;}
             .map-container {width: 100%; margin: 0 auto; padding: 0; border-radius: 25px; overflow: hidden;}
+		.addwhite{color:#000 !important}
         </style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
@@ -87,7 +90,7 @@
 									    margin-top: 0;
 									" href="https://goo.gl/maps/yaKFvwRPC1p" target="_blank" class="button">View on google maps</a></p>
 									<p style="margin-bottom: 10px;">Easily plan to the wedding without having to worry about conveyance with Ola</p>
-									<p><a class="button cabbook" style="background: #fff;color:#000 !important;" href="https://olawebcdn.com/assets/ola-universal-link.html?lat=&lng=&category=share&utm_source=xapp_token&landing_page=bk&drop_lat=13.188&drop_lng=80.193&affiliate_uid=12345" target="_blank" class="button"><i class="fa fa-taxi" style="font-size:22px;color:#000 !important;"></i> Book a cab</a></p>
+									<p><a class="button cabbook addwhite" style="background: #fff;" href="https://olawebcdn.com/assets/ola-universal-link.html?lat=&lng=&category=share&utm_source=xapp_token&landing_page=bk&drop_lat=13.188&drop_lng=80.193&affiliate_uid=12345" target="_blank" class="button"><i class="fa fa-taxi addwhite" style="font-size:22px;"></i> Book a cab</a></p>
 								</div>
 							</section>
 						</div>
