--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					    <span class="location">ARUL ARASU PALACE, VADAGARAI, REDHILLS</span>
 				            <span class="alarm_reminder">1440</span>
 					</div>
-					<h2>Arul Arasu Palace, Vadagarai, Redhills</h2>
+					<h2>Arul Arasan Palace, Vadagarai, Redhills</h2>
 					<p>Opposite to Bharath Petrol Bunk</p>
 
 				</header>                
