--- a/friends.html
+++ b/friends.html
@@ -44,7 +44,7 @@
 		</div>
 		<!-- Banner -->
 			<section id="banner" style="
-				    background-image: url('../images/bg.jpeg');
+				    background-image: url('../images/bg.jpg');
 				    padding-top: 16em;
 				    background-position: center 0">
 				<div class="inner animated a_a fadeIn">
