--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 					<div class="row">
 						<div class="4u">
 							<section class="special">
-								<a href="" class="image fit a_a"><img src="images/rajapor.JPG" /></a>
+								<a href="" class="image fit a_a"><img src="images/rajapor.jpg" /></a>
 								<h3>Soundarajan</h3>
 								<p><quote>If loving you was a job, I’d be the most deserving, dedicated, and qualified candidate. In fact, I’d even be willing to work for free</quote></p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special">
-								<a href="#" class="image fit a_a"><img src="images/dharpor.JPG" /></a>
+								<a href="#" class="image fit a_a"><img src="images/dharpor.jpg" /></a>
 								<h3>Dharunnya</h3>
 								<p>Everyone has their own motivation to get up in the morning and face the day. You are mine.</p>	
 							</section>
@@ -119,7 +119,7 @@
                         
 						<div class="4u">
 							<section class="special">
-								<a href="#" class="image fit a_a"><img src="images/pair.JPG" /></a>
+								<a href="#" class="image fit a_a"><img src="images/pair.jpg" /></a>
                                 
 								<h3>Mr. & Mrs.</h3>
 								<p>“Love is the emblem of eternity; it confounds all notion of time; effaces all memory of a beginning, all fear of an end.”</p>
@@ -141,106 +141,106 @@
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/thing.JPG"><img src="images/thing.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/thing.jpg"><img src="images/thing.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mf.JPG"><img src="images/mf.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mf.jpg"><img src="images/mf.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ff.JPG"><img src="images/ff.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ff.jpg"><img src="images/ff.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma.JPG"><img src="images/ma.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma.jpg"><img src="images/ma.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma1.JPG"><img src="images/ma1.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma1.jpg"><img src="images/ma1.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/ma2.JPG"><img src="images/ma2.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/ma2.jpg"><img src="images/ma2.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fa1.JPG"><img src="images/fa1.JPG"></a>
-				</section>
-			</div>
-
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fa2.JPG"><img src="images/fa2.JPG"></a>
-				</section>
-			</div>
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fall.JPG"><img src="images/fall.JPG"></a>
-				</section>
-			</div>
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mall.JPG"><img src="images/mall.JPG"></a>
-				</section>
-			</div>
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/child.JPG"><img src="images/child.JPG"></a>
-				</section>
-			</div>
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/all1.JPG"><img src="images/all1.JPG"></a>
-				</section>
-			</div>
-			<div class="3u a_a">
-				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/6223E893-A610-4019-9431-5E576AA05B09.jpeg"><img
-							src="images/6223E893-A610-4019-9431-5E576AA05B09.jpeg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fa1.jpg"><img src="images/fa1.jpg"></a>
 				</section>
 			</div>
 
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/169E196F-1767-4D19-B182-D1EB68B43EA5.jpeg"><img
-							src="images/169E196F-1767-4D19-B182-D1EB68B43EA5.jpeg"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fa2.jpg"><img src="images/fa2.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mc2.JPG"><img src="images/mc2.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/fall.jpg"><img src="images/fall.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc4.JPG"><img src="images/fc4.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mall.jpg"><img src="images/mall.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc3.JPG"><img src="images/fc3.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/child.jpg"><img src="images/child.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc2.JPG"><img src="images/fc2.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/all1.jpg"><img src="images/all1.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/mc1.JPG"><img src="images/mc1.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/agrp.jpg"><img
+							src="images/agrp.jpg"></a>
+				</section>
+			</div>
+
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/children.jpg"><img
+							src="images/children.jpg"></a>
 				</section>
 			</div>
 			<div class="3u a_a">
 				<section>
-					<a data-fancybox="gallery" class="image fit" href="images/fc1.JPG"><img src="images/fc1.JPG"></a>
+					<a data-fancybox="gallery" class="image fit" href="images/mc2.jpg"><img src="images/mc2.jpg"></a>
+				</section>
+			</div>
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/fc4.jpg"><img src="images/fc4.jpg"></a>
+				</section>
+			</div>
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/fc3.jpg"><img src="images/fc3.jpg"></a>
+				</section>
+			</div>
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/fc2.jpg"><img src="images/fc2.jpg"></a>
+				</section>
+			</div>
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/mc1.jpg"><img src="images/mc1.jpg"></a>
+				</section>
+			</div>
+			<div class="3u a_a">
+				<section>
+					<a data-fancybox="gallery" class="image fit" href="images/fc1.jpg"><img src="images/fc1.jpg"></a>
 				</section>
 			</div>
 		</div>
