--- a/404.html
+++ b/404.html
@@ -62,6 +62,9 @@ a {
     margin: 0 auto;
 }
     </style>
+	meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
+    <meta property="og:image" content="https://rajadhara.github.io/images/wa.png">
+       <div id='hidden' style='display:none;'><img src="https://rajadhara.github.io/images/wa.png"></div>
 </head>
 
 <body>
