--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 					    <span class="location">ARUL ARASU PALACE, VADAGARAI, REDHILLS</span>
 				            <span class="alarm_reminder">1440</span>
 					</div>
+					<div style="
+					    box-shadow: 0px 0px 6px #88888863;
+					    padding: 0px 5px;
+					    border-radius: 15px;
+					    display: block;
+					"><h2 style="padding-top: 5px;">Reception</h2><h3>June 5<sup>th</sup>, 6 PM Onwards</h3></div>
 					<h2>Arul Arasan Palace, Vadagarai, Redhills</h2>
 					<p>Opposite to Bharath Petrol Bunk</p>
 
