--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@ a {
     margin: 0 auto;
 }
     </style>
-	meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
+	<meta property="og:description" content="Dharunnya and Soundarajan are getting married this application helps to remind & locate you for their celebration">
     <meta property="og:image" content="https://rajadhara.github.io/images/wa.png">
        <div id='hidden' style='display:none;'><img src="https://rajadhara.github.io/images/wa.png"></div>
 </head>
